<resources>
    <string name="app_name">Food Runner</string>
    <string name="preference_file_name">Restaurant preference</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!!!</string>
    <string name="done">Done</string>
    <string name="enter_your_registered_mobile_no_and_email_id">Enter your registered mobile no and email id:</string>
    <string name="mobile_number_10_digits">Mobile Number(10 Digits)</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_account_sign_up_now">Don\'t have account? Sign up now</string>
    <string name="name_min_3_characters">Name(Min 3 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_the_recived_otp_below">Enter the recived OTP below:</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="choose_from_the_menu_below">Choose from the menu below</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="you_do_not_have_any_fav_restaurant">You do not have any fav restaurant</string>
    <string name="you_haven_t_place_any_orders_yet">You haven\'t place any orders yet</string>
    <string name="your_previous_orders_are_listed_below">Your Previous Orders Are Listed Below:</string>
    <string name="name">Name</string>
    <string name="name_of_food">Name Of Food</string>
    <string name="question">Question</string>
    <string name="answers">Answers</string>
    <string name="name_of_restaurant">Name Of Restaurant</string>
    <string name="no">No.</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="rating">rating</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="sort">Sort</string>
</resources>
