<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:id="@+id/llcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imgFoodImage"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:layout_weight="3.3">

            <TextView
                android:id="@+id/txtFoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/name_of_food"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFoodPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtFoodName"
                android:drawableLeft="@drawable/ic_rupee"
                android:drawablePadding="3dp"
                android:padding="8dp"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <ImageView
                android:id="@+id/imgFav"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_red_fav" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/rating"
                android:textColor="#ffca28"
                android:textSize="20sp" />


        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>